--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.2",
     "iso_8583": "^2.4.8",
     "jsonfile": "^4.0.0",
+    "moment": "^2.20.1",
     "nocache": "^2.0.0",
     "typescript": "^2.6.2"
   },
