implementing 3DES KS calculcation

--- a/config.json
+++ b/config.json
@@ -17,9 +17,11 @@
         "CV_MES": "00004D000341000000004D0003210000",
         "CV_MAC": "00004D000341000000004D0003210000",
         "CV_IMP": "00427D000341000000427D0003210000",
+        "CV_ENC": "00007100034100000000710003210000",
         "K_UR": {
             "GN": 1,
-            "KV": 1
+            "KV": 1,
+            "data": "8CF2FE610D853170254ABAA74F83621C"
         }
     }
 }
