implementing MAC calculation

--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
         "K_UR": {
             "GN": 1,
             "KV": 1,
-            "data": "8CF2FE610D853170254ABAA74F83621C"
+            "keydata": "8CF2FE610D853170254ABAA74F83621C"
         }
     }
 }
