ISO response handling, deriving keys K_INIT/K_PERS, all OPT phases

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
         ],
         "herstellerid": "C8F0F0F0F1F6",
         "herstellerserialno": "F1F0F0F8F1F5F4F7F1F1",
-        "zkano": "F0F0F0F0F0F0F0F0F0F0F0F0F0F0F0F0",
+        "zkano": "0",
         "ozp": "20180126121300",
         "terminalid": "12345679",
         "betreiberblz": "50050000",
