implementing OPT registrierung, abmeldung

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
         "status": "betriebsbereit",
         "herstellerid": "C8F0F0F0F1F6",
         "herstellerserialno": "F1F0F0F8F1F5F4F7F1F1",
+        "betreiberid": "C1C2C3C4C5C6",
         "zkano": "0",
         "ozp": "00000101000000",
         "terminalid": "12345679",
